# SC-55

./: BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: Findrtmidi.cmake
src/: audio.h  emu.cpp  emu.h  lcd.cpp  lcd.h  main_frontend.cpp  mcu.cpp  mcu.h  mcu_renderer.cpp  midi.h  midi_rtmidi.cpp  midi_win32.cpp  pcm.cpp  serial.h  serial_dummy.c  serial_posix.c  serial_posix.cpp  serial_win32.c  smf.cpp  smf.h  submcu.cpp
test/: CMakeLists.txt  test_ringbuffer.cpp
test/integration/: CMakeLists.txt  test_runner.py
test/integration/avmidi/: 01.mid  02.mid  03.mid  04.mid  05.mid  06.mid  07.mid  09.mid  0A.mid  0C.mid  11.mid  12.mid  13.mid  14.MID  15.mid  16.mid  19.mid  20.mid  21.mid  22.mid  23.mid  24.mid  25-2.mid  29.mid  30.mid  31.mid  32.mid
